feat: Atualizar título e descrição do site, melhorar a apresentação da página inicial e atualizar dependências do projeto

--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sound Connections - Master Connected Speech in English</title>
-    <meta name="description" content="Learn to understand and speak natural English through connected speech patterns. Interactive lessons with native audio and practice exercises." />
-    <meta name="author" content="Sound Connections" />
 
-    <meta property="og:title" content="Sound Connections - Master Connected Speech" />
-    <meta property="og:description" content="Transform your English fluency with interactive connected speech lessons" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sound Flow Lab – Learn by Listening</title>
+  <meta name="description"
+    content="Learn to speak English with native-like fluency and pronunciation through sound, rhythm, and experimental practice." />
+  <meta name="author" content="Sound Flow Lab" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Sound Flow Lab – Learn by Listening" />
+  <meta property="og:description"
+    content="Transform your English fluency with interactive lessons on sound, rhythm, and pronunciation." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
